After some cleanup of inteface etc-
